Update Klasifikasi bunga CNN.ipynb

--- a/Klasifikasi bunga CNN.ipynb
+++ b/Klasifikasi bunga CNN.ipynb
@@ -7428,7 +7428,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mode_new.save(m.hdf5)"
+    "model_new.save(m.hdf5)"
    ]
   }
  ],
